tests/suite/fail/generated/borrow/fail_move_store_s.ny
fn store(x: string) -> void { print(x) }
fn main() {
    let s = "hello"
    store(s)
    print(s) //~ ERROR was moved
}
